# iam851

./: .gitignore  CMakeLists.txt
class11/: CMakeLists.txt  print_matrix_fortran.F90  test_data_layout.c  test_data_layout_fortran.F90
class16/: CMakeLists.txt  test_average.cxx  test_average_fortran.F90  test_integration.cxx  test_message.cxx  vector_average_fortran.f90
class20/: CMakeLists.txt  mandelbrot.cxx  mandelbrot.gpl
class21/: CMakeLists.txt  message_mpi.cxx  test_integration_mpi.cxx  wtime.h
class23/: CMakeLists.txt  derivative.cxx  kdv.cxx  kdv.ipynb  mpi_dl_test.cxx  mpi_domain.h  plot.gpl  test_derivative.cxx  wave_equation.cxx  wave_equation.h  wave_equation.ipynb
class28/: CMakeLists.txt  memory.c  mpi_pingpong.cxx  params.c  params.h
class3/: .clang-format  CMakeLists.txt  Makefile  greeting.c  hello.c  hello.h
class3/cxx/: build.sh  factorial.cxx  greeting.cxx  hello.cxx  hello.h
class7/: CMakeLists.txt  factorial.cxx  test_factorial.cxx
class8/: bowling.cxx
linalg/: CMakeLists.txt
linalg/c/: CMakeLists.txt  linear_algebra.h  matrix.c  matrix_matrix_mul.c  matrix_vector_mul.c  test_args.c  test_matrix_matrix_mul.c  test_matrix_vector_mul.c  test_vector_add.c  test_vector_dot.c  vector.c  vector_add.c  vector_dot.c
linalg/cxx/: CMakeLists.txt  large_matrix_vector_mul.cxx  linear_algebra.h  matrix.cxx  matrix_matrix_mul.cxx  matrix_vector_mul.cxx  test_linear_algebra.cxx  test_matrix_matrix_mul.cxx  test_matrix_vector_mul.cxx  test_vector_add.cxx  test_vector_dot.cxx  vector.cxx  vector_add.cxx  vector_dot.cxx
